# scidtopgn

./: .gitignore  CLAUDE.md  CRUSH.md  Cargo.toml  DATE_PARSING_ISSUE.md  DEVELOPMENT_NOTES.md  Dockerfile.scid  README.md  SCID_DATABASE_FORMAT.md  TODO_FIX_DATE_PARSING.md
experiments/: ARCHITECTURE_RECOMMENDATIONS_SHAKMATY.md  ARCHITECTURE_RECOMMENDATIONS_VANILLA.md
experiments/scid_parser/: ALGEBRAIC_NOTATION_DEPENDENCIES.md  Cargo.toml  SCID_FORMAT_COMPLETION_STATUS.md  SG4_PARSING_PROMPT.md
experiments/scid_parser/src/: date.rs  main.rs  position.rs  sg4.rs  si4.rs  sn4.rs  utils.rs
src/: lib.rs  main.rs
src/pgn/: exporter.rs  mod.rs
src/scid/: database.rs  events.rs  games.rs  index.rs  mod.rs  moves.rs  names.rs
test/data/: five.pgn  five.sg4  five.si4  five.sn4
tests/: comprehensive_date_test.rs  date_extraction_tests.rs  integration_tests.rs
