[package]
name = "scidtopgn"
version = "0.1.0"
edition = "2021"
authors = ["Chess Database Converter"]
description = "A CLI tool to convert SCID databases (.si4/.sg4/.sn4) to PGN format"
license = "MIT OR Apache-2.0"

[[bin]]
name = "scidtopgn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
